parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-hexadecimal-19.snap
---
source: src/lexer/lexer.rs
description: "0xD"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xD",
        ),
        start: 0,
        end: 3,
    },
]
