parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-hexadecimal-20.snap
---
source: src/lexer/lexer.rs
description: "0xE"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xE",
        ),
        start: 0,
        end: 3,
    },
]
