parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-hexadecimal-21.snap
---
source: src/lexer/lexer.rs
description: "0xF"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xF",
        ),
        start: 0,
        end: 3,
    },
]
