parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-hexadecimal-3.snap
---
source: src/lexer/lexer.rs
description: "0x3"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x3",
        ),
        start: 0,
        end: 3,
    },
]
