parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-octal-1.snap
---
source: src/lexer/lexer.rs
---
[
    Token {
        kind: Octal,
        value: Number(
            "0o1",
        ),
        start: 0,
        end: 3,
    },
]
