parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-octal-6.snap
---
source: src/lexer/lexer.rs
---
[
    Token {
        kind: Octal,
        value: Number(
            "0o6",
        ),
        start: 0,
        end: 3,
    },
]
